--- a/getting-started/index-my.html
+++ b/getting-started/index-my.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Getting Started</title>
+  <title>Document</title>
 </head>
 
 <body>
-  <div id="app">
-    {{ message }}
+  <div id='app'>
+    {{message}}
   </div>
-
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script>
     new Vue({
       el: '#app',
       data: {
-        message: 'Hello Vue.j'
+        message: 'hello vue.js'
       }
     })
   </script>
+
 </body>
 
 </html>
