--- a/playground-my/12.event-emit-3.html
+++ b/playground-my/12.event-emit-3.html
@@ -4,18 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
 
 <body>
   <div id="app">
     <p>{{ num }}</p>
-    <!-- <app-header v-on:하위 컴포넌트에서 발생한 이벤트 이름="상위 컴포넌트의 메서드 이름"></app-header> -->
-    <app-header v-on:pass="logText"></app-header>
+    <app-header></app-header>
     <app-content v-on:increase="increaseNumber"></app-content>
   </div>
-
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script>
     var appHeader = {
@@ -34,7 +31,6 @@
         }
       }
     }
-
     var vm = new Vue({
       el: '#app',
       components: {
@@ -42,16 +38,15 @@
         'app-content': appContent
       },
       methods: {
-        logText: function () {
-          console.log('hi');
-        },
         increaseNumber: function () {
-          this.num = this.num + 1;
+          this.num++;
         }
       },
       data: {
+        message: 'hi',
         num: 10
       }
+
     });
   </script>
 </body>
