--- a/playground-my/22.watch-vs-computed copy.html
+++ b/playground-my/22.watch-vs-computed copy.html
@@ -1,22 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <style>
-    .warning {
-      color: red;
-    }
-  </style>
 </head>
-
 <body>
   <div id="app">
-    <!-- <p v-bind:class="{ warning: isError }">Hello</p> -->
-    <p v-bind:class="errorTextColor">Hello</p>
+    {{ num }}
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -24,21 +16,25 @@
     new Vue({
       el: '#app',
       data: {
-        // cname: 'blue-text',
-        isError: false
+        num: 10
       },
       computed: {
-        errorTextColor: function () {
-          // if (isError) {
-          //   return 'warning'
-          // } else {
-          //   return null;
-          // }
-          return this.isError ? 'warning' : null;
+        doubleNum: function() {
+          return this.num * 2;
+        }
+      },
+      watch: {
+        num: function(newValue, oldValue) {
+          this.fetchUserByNumber(newValue);
+        }
+      },
+      methods: {
+        fetchUserByNumber: function(num) {
+          // console.log(num);
+          axios.get(num);
         }
       }
     });
   </script>
 </body>
-
 </html>
