--- a/playground-my/23.computed-usage.html
+++ b/playground-my/23.computed-usage.html
@@ -15,28 +15,23 @@
 
 <body>
   <div id="app">
-    <!-- <p v-bind:class="{ warning: isError }">Hello</p> -->
-    <p v-bind:class="errorTextColor">Hello</p>
+    <p v-bind:class="{ warning : isError}">Error Message</p>
   </div>
+
 
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script>
     new Vue({
       el: '#app',
       data: {
-        // cname: 'blue-text',
-        isError: false
+        isError: false,
       },
       computed: {
         errorTextColor: function () {
-          // if (isError) {
-          //   return 'warning'
-          // } else {
-          //   return null;
-          // }
           return this.isError ? 'warning' : null;
         }
-      }
+      },
+
     });
   </script>
 </body>
